[gd_scene load_steps=5 format=3 uid="uid://c264d30ssk5ew"]

[ext_resource type="Script" path="res://components/states_menu/state_button/state_button.gd" id="1_3xgkx"]
[ext_resource type="StyleBox" uid="uid://bthiule6t6e64" path="res://styles/button.tres" id="1_k1g3v"]
[ext_resource type="StyleBox" uid="uid://hfxl0d1v6t3w" path="res://styles/button_pressed.tres" id="2_ure01"]
[ext_resource type="Texture2D" uid="uid://btdl8brvwokcb" path="res://components/states_menu/state_button/line.svg" id="4_yulib"]

[node name="StateButton" type="Button"]
custom_minimum_size = Vector2(96, 96)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/focus = ExtResource("1_k1g3v")
theme_override_styles/disabled = ExtResource("1_k1g3v")
theme_override_styles/hover_pressed = ExtResource("1_k1g3v")
theme_override_styles/hover = ExtResource("1_k1g3v")
theme_override_styles/pressed = ExtResource("2_ure01")
theme_override_styles/normal = ExtResource("1_k1g3v")
expand_icon = true
script = ExtResource("1_3xgkx")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="Line" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -40.0
offset_right = 40.0
offset_bottom = 5.0
grow_horizontal = 2
texture = ExtResource("4_yulib")
stretch_mode = 4

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
